# rs-mat2

./: Cargo.toml  README.md
src/: create.rs  misc.rs  mul.rs  sdiv.rs  set.rs  transform.rs
