[package]
name = "mat2"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["mat2", "matrix", "2x2", "2"]
description = "rust matrix 2x2 functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-mat2.git"
homepage = "https://github.com/nathanfaucett/rs-mat2"

[dependencies]
approx_eq = { git = "https://github.com/nathanfaucett/rs-approx_eq.git" }
num = { git = "https://github.com/nathanfaucett/rs-num.git" }
signed = { git = "https://github.com/nathanfaucett/rs-signed.git" }
